Update French Version + mark duplicated & translation that didn't work (#728)
* Update French Version + mark duplicated & translation that didn't work

duplication mark : //duplicated
translation mark : //Don't translate in diplomacy view 
or //You misses this translation, said Smashfanful

* Update Other.json

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -578,7 +578,32 @@
 		Dutch:"Kon game niet van klembord laden!"
 		Spanish:"No se pudo cargar el juego desde el portapapeles!"
 	}
-	
+
+////// New game screen - it looks like it's duplicated
+/*
+	"Civilization":{	
+		Italian:"Civiltà"
+		Russian:"Цивилизация"
+		French:"Civilisation"
+		Romanian:"Civilizaţie"
+		Spanish:"Civilización"
+		Simplified_Chinese:"文明"
+		Portuguese:"Civilização"
+		German:"Zivilisation"
+	}
+
+	"World size":{	 //feels like duplicate
+		Italian:"Dimensione della mappa"
+		Russian:"Размер мира"
+		French:"Taille du monde"
+		Romanian:"Mărime pământ"
+		Spanish:"Tamaño del mundo"
+		Simplified_Chinese:"世界大小"
+		Portuguese:"Tamanho do mundo"
+		German:"Kartengröße"
+	}
+
+*/
 /////// New game screen
 	
 	"Start game!":{
@@ -592,6 +617,7 @@
 		German:"Spiel starten!"
 		Japanese:"ゲームを始める！"
 	}
+
 	"Civilization:":{
 		Italian:"Civiltà:"
 		Russian:"Цивилизация:"
@@ -603,6 +629,7 @@
 		German:"Zivilisation"
 		Japanese:"文明"
 	}
+
 	"World size:":{
 		Italian:"Dimensione mappa:"
 		Russian:"Размер мира:"
@@ -615,6 +642,18 @@
 		Japanese:"ワールドサイズ"
 	}
 
+	"Map type":{	
+		Italian:"Tipo di mappa"
+		Russian:"Тип карты"
+		French:"Type de carte"
+		Romanian:"Tipul hărții"
+		Spanish:"Tipo de mapa"
+		Simplified_Chinese:"地图类型"
+		Portuguese:"Tipo de mapa"
+		German:"Kartentyp"
+		Dutch:"Kaarttype"
+	}
+
 	"Number of enemies:":{ //nummber of AI should be more accurate
 		Italian:"Numero di nemici:"
 		Russian:"Количество врагов:"
@@ -625,6 +664,41 @@
 		Portuguese:"Numero de inimigos:"
 		German:"Anzahl der Gegner:"
 		Japanese:"敵の数"
+	}
+
+/*
+	"Number of enemies":{	//duplicated
+		Italian:"Numero di avversari"
+		Russian:"Количество врагов"
+		French:"Nombre d'ennemies"
+		Romanian:"Număr de inamici"
+		Spanish:"Número de enemigos"
+		Simplified_Chinese:"电脑玩家"
+		Portuguese:"Número de inimigos"
+		German:"Anzahl der Gegner"
+	}
+*/
+
+	"Number of human players":{
+		Italian:"Numero di giocatori"
+		Russian:"Количество врагов"
+		French:"Nombre de joueurs humains"
+		Romanian:"Număr de inamici"
+		Spanish:"Número de enemigos"
+		Simplified_Chinese:"人类玩家"
+		Portuguese:"Número de inimigos"
+		German:"Anzahl der Gegner"
+	}
+
+	"Difficulty":{	
+		Italian:"Difficoltà"
+		Russian:"Сложность"
+		French:"Difficulté"
+		Romanian:"Dificultate"
+		Spanish:"Dificultad"
+		Simplified_Chinese:"难度"
+		Portuguese:"Dificuldade"
+		German:"Schwierigkeitsgrad"
 	}
 
 	"Victory status":{
@@ -1293,7 +1367,7 @@
 		Portuguese:"Nome do jogo salvo"
 	}
 
-	"Copy to clipboard":{
+	"Copy to clipboard":{ //shouldn't it be "copy saved game to clipboard" ?
 		Italian:"Copia su appunti"
 		French:"Copier dans le presse-papier"
 		Simplified_Chinese:"复制到剪贴板"
@@ -1723,6 +1797,10 @@
 		Portuguese:"Aceitar"
 		German:"Annehmen"
 	}
+
+	"Keep going":{
+		French:"Continuer..."
+	}
 	
 	"There's nothing on the table":{
 		Italian:"Non c'è niente da trattare"
@@ -1755,7 +1833,7 @@
 	"Open Borders":{
 		Italian:"Diritto di passaggio"
 		Simplified_Chinese:"开放边境"
-		French:"Frontières ouvertes"
+		French:"Accord de libre passage"
 	}
 
 	"Gold per turn":{
@@ -1769,7 +1847,7 @@
 		German:"Gold pro Runde"
 	}
 
-	"Cities":{ //You misses this translation, said Smashfanful
+	"Cities":{ //You misses this translation, said Smashfanful //Don't translate in diplomacy view
 		Italian:"Città"
 		Romanian:"Orase"
 		Spanish:"Ciudades"
@@ -1787,7 +1865,7 @@
 		Simplified_Chinese:"科技"
 	}
 
-	"Declarations of war":{ //You misses this translation, said Smashfanful
+	"Declarations of war":{ //You misses this translation, said Smashfanful //Don't translate in diplomacy view
 		Italian:"Dichiarazione di guerra"
 		French:"Déclarations de guerre"
 		Simplified_Chinese:"宣战"
@@ -1799,7 +1877,7 @@
 		Simplified_Chinese:"奢侈资源"
 	}
 
-	"Strategic resources":{
+	"Strategic resources":{ //Don't translate in diplomacy view
 		Italian:"Risorse strategiche" //You misses this translation, said Smashfanful
 		French:"Ressources stratégiques"
 		Simplified_Chinese:"战略资源"
@@ -2319,75 +2397,6 @@
 		Portuguese:"Imensa"
 		German:"Enorm"
 	}
-
-////// New game screen
-	
-	"Civilization":{	
-		Italian:"Civiltà"
-		Russian:"Цивилизация"
-		French:"Civilisation"
-		Romanian:"Civilizaţie"
-		Spanish:"Civilización"
-		Simplified_Chinese:"文明"
-		Portuguese:"Civilização"
-		German:"Zivilisation"
-	}
-
-	"World size":{	 //feels like duplicate
-		Italian:"Dimensione della mappa"
-		Russian:"Размер мира"
-		French:"Taille du monde"
-		Romanian:"Mărime pământ"
-		Spanish:"Tamaño del mundo"
-		Simplified_Chinese:"世界大小"
-		Portuguese:"Tamanho do mundo"
-		German:"Kartengröße"
-	}
-
-	"Number of human players":{	//feels like duplicate
-		Italian:"Numero di giocatori"
-		Russian:"Количество врагов"
-		French:"Nombre d'ennemies"
-		Romanian:"Număr de inamici"
-		Spanish:"Número de enemigos"
-		Simplified_Chinese:"人类玩家"
-		Portuguese:"Número de inimigos"
-		German:"Anzahl der Gegner"
-	}
-
-	"Number of enemies":{	//feels like duplicate
-		Italian:"Numero di avversari"
-		Russian:"Количество врагов"
-		French:"Nombre d'ennemies"
-		Romanian:"Număr de inamici"
-		Spanish:"Número de enemigos"
-		Simplified_Chinese:"电脑玩家"
-		Portuguese:"Número de inimigos"
-		German:"Anzahl der Gegner"
-	}
-
-	"Difficulty":{	
-		Italian:"Difficoltà"
-		Russian:"Сложность"
-		French:"Difficulté"
-		Romanian:"Dificultate"
-		Spanish:"Dificultad"
-		Simplified_Chinese:"难度"
-		Portuguese:"Dificuldade"
-		German:"Schwierigkeitsgrad"
-	}
-
-	"Map type":{	
-		Italian:"Tipo di mappa"
-		Russian:"Тип карты"
-		French:"Type de carte"
-		Romanian:"Tipul hărții"
-		Spanish:"Tipo de mapa"
-		Simplified_Chinese:"地图类型"
-		Portuguese:"Tipo de mapa"
-		German:"Kartentyp"
-		Dutch:"Kaarttype"
-	}
 	
 ////// Diplomacy!
 	
@@ -2435,7 +2444,7 @@
 		German:"Krieg erklären"
 	}
 
-	"Declare war on [civName]?":{
+	"Declare war on [civName]?":{ //Don't translate in diplomacy view
 		Italian:"Vuoi dichiarare guerra a [civName]?"
 		French:"Déclarer la guerre à [civName]?"
 		Simplified_Chinese:"向[civName]宣战吗？"
@@ -2525,16 +2534,19 @@
 	// Friendship declaration flavor texts
 	"Declare Friendship ([numberOfTurns] turns)":{
 		Italian:"Dichiarazione di Amicizia ([numberOfTurns] turni)"
+		French:"Déclaration d'Amitié ([numberOfTurns] tours)"
 		Simplified_Chinese:"宣布相互友善([numberOfTurns]回合)"
 	}
 
 	"May our nations forever remain united!":{
 		Italian:"Possano le nostre nazioni rimanere per sempre unite!"
+		French:"Puissent nos nations rester unies pour toujours!"
 		Simplified_Chinese:"我们两个文明将永远肝胆相照、休戚与共地站在一起！"
 	}
 
 	"Indeed!":{
 		Italian:"Perfetto!"
+		French:"Parfait!" //or En effet! , more accurate but harder to understand what it means
 		Simplified_Chinese:"这是无比正确的命运抉择！"
 	}
 	
@@ -2578,10 +2590,10 @@
 
   "Ally":{
 		Italian:"Alleato"
-		French:"Allié"
-		Simplified_Chinese:"歃血之盟"
+    French:"Allié"
+	  Simplified_Chinese:"歃血之盟"
   }
-	
+
 ////// Diplomatic modifiers
 
 	"You declared war on us!":{
@@ -2616,19 +2628,23 @@
 	
 	"We have signed a public declaration of friendship":{
 		Italian:"Abbiamo segnato una dichiarazione pubblica d'amicizia!"
-		Simplified_Chinese:"真是美好的一天！我们宣布：两个文明间将彼此尊重、相互友善！"
+		French:"Nous avons publiquement signé une Déclaration d'Amitié"
+    		Simplified_Chinese:"渡尽劫波兄弟在,相逢一笑泯恩仇！我们宣布：冰释前嫌、携手前进！"
+
 	}
 	"You have declared friendship with our enemies!":{
 		Italian:"Hai dichiarato un'amicizia con i nostri nemici!"
-		Simplified_Chinese:"渡尽劫波兄弟在,相逢一笑泯恩仇！我们宣布：冰释前嫌、携手前进！"
+		French:"Vous avez signé une Déclaration d'Amitié avec nos ennemis!"
 	}
 	"You have declared friendship with our allies":{
 		Italian:"Hai dichiarato un'amicizia con i nostri alleati."
+		French:"Vous avez signé une Déclaration d'Amitié avec nos alliés"
 		Simplified_Chinese:"兄弟齐心、其利断金！我们宣布：我们与盟友间兄弟般的友谊永世长存！"
 	}
 	
 	"Our open borders have brought us closer together.":{
 		Italian:"I nostri accordi di passaggio hanno avvicinato le nostre nazioni."
+		French:"Notre Accord de libre passage nous a rapprochés"
 		Simplified_Chinese:"开放的边界促进了彼此的了解，让我们的人民心心相通！"
 	}
 	
@@ -2645,7 +2661,8 @@
 		German:"Überblick"
 	}
 
-	"Cities":{	
+/*
+	"Cities":{ //duplicated
 		Italian:"Città"
 		Russian:"Города"
 		French:"Villes"
@@ -2655,6 +2672,7 @@
 		Portuguese:"Cidades"
 		German:"Städte"
 	}
+*/
 
 	"Total":{
 		Italian:"Totale"
@@ -3135,9 +3153,9 @@
     }
 
     " for ":{ //for example:+1Gold for Gems,Gold,Silver
-	  Italian:" per "
-	  Simplified_Chinese:"，当建造在拥有下列资源的地块上时："
-	  French:"par "
+		Italian:" per "
+		Simplified_Chinese:"，当建造在拥有下列资源的地块上时："
+		French:"par "
     }
 
     // Options menu, pointed out by Smashfanful
@@ -3145,7 +3163,7 @@
 	"Missing translations:":{
 		Italian:"Traduzioni mancanti:"
 		Russian:"Отсутствующие переводы:"
-	    Simplified_Chinese:"未翻译的词条:"
+	    	Simplified_Chinese:"未翻译的词条:"
 		French:"Traductions manquantes:"
 	}
 
