Trade button changed to "Negotiate Peace" when at war, and peace treaties are a must when "trading" in this situation

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2488,6 +2488,8 @@
 		Portuguese:"Você vai pagar por isso!"
 		Simplified_Chinese:"你会为此付出代价的！"
 	}
+	
+	"Negotiate Peace":{}
 
 	"Very well.":{
 		Italian:"Molto bene."
