--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -102,7 +102,7 @@
 	}
 
 	"Immediately creates a cheapest available cultural building in each of your first 4 cities for free":{
-		Italian:"Le prime 4 città sono fornite di un edificio culturale gratuito"
+		Italian:"Le prime 4 città ricevono gratuitamente un edificio culturale"
 		Russian:"Бесплатное культурное здание в первых 4 городах"
 		Romanian:"Construcție de cultură gratuită pentru primele 4 orașe"
 		Spanish:"Edificio de cultura gratis en las primeras 4 ciudades"
