implemented single tap move - units stay selected after move (to go on moving) - and they are de-selectable by taping them again (to abort moving)

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -140,7 +140,7 @@
 		Russian:"Бомбардная сила"
 		French:"Force de bombardement"
 		Romanian:"Puterea bombardamentului"
-		German:"Bombardieren Sie die Stärke"
+		German:"Stärke Bombardierung"
 		Dutch:"Bombard sterkte"
 		Spanish:"Fuerza de bombardeo"
 		Simplified_Chinese:"远程轰击"
