--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -698,7 +698,7 @@
 	}
 	
 	"Bonus vs Mounted 33%":{
-		Italian:"+33% Bonus contro unità a cavallo
+		Italian:"+33% Bonus contro unità a cavallo"
 		Simplified_Chinese:"对战骑乘单位时+33%战斗力"
 	}
 
